--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,12 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- Card dimensions -->
+    <dimen name="card_height">200dp</dimen>
+    <dimen name="card_width">200dp</dimen>
+    <dimen name="card_corner_radius">4dp</dimen>
+    <dimen name="card_text_size">18sp</dimen>
+    <dimen name="card_padding">15sp</dimen>
+    <dimen name="card_elevation">5dp</dimen>
 </resources>
