--- a/app/src/main/res/layout/alert_card.xml
+++ b/app/src/main/res/layout/alert_card.xml
@@ -19,6 +19,7 @@
         android:layout_height="match_parent"
         android:textColor="@color/card_textColor"
         android:textSize="@dimen/card_text_size"
+        android:text="@string/card_default_text"
         />
 
 </android.support.v7.widget.CardView>
