--- a/app/src/main/res/layout/alert_card.xml
+++ b/app/src/main/res/layout/alert_card.xml
@@ -20,6 +20,7 @@
         android:textColor="@color/card_textColor"
         android:textSize="@dimen/card_text_size"
         android:text="@string/card_default_text"
+        android:gravity="center_horizontal"
         />
 
 </android.support.v7.widget.CardView>
