--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,13 +1,33 @@
 <!-- A RecyclerView with some commonly used attributes -->
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:text="Alerts"
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        android:gravity="center_horizontal"
+        android:textSize="34sp"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginBottom="0dp"
+        android:id="@+id/textView" />
+
+    <TextView
+        android:text="____________"
+        android:gravity="top"
+        android:layout_width="match_parent"
+        android:layout_height="18dp"
+        android:textSize="34sp"
+        android:layout_marginTop="0dp"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:layout_marginTop="?attr/actionBarSize" />
-</RelativeLayout>
+        android:layout_width="match_parent" />
+
+</LinearLayout>
