--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,16 +13,15 @@
         android:textSize="34sp"
         android:layout_marginTop="?attr/actionBarSize"
         android:layout_marginBottom="0dp"
-        android:id="@+id/textView" />
+        />
 
     <TextView
         android:text="____________"
         android:gravity="top"
         android:layout_width="match_parent"
-        android:layout_height="18dp"
-        android:textSize="34sp"
+        android:layout_height="24dp"
         android:layout_marginTop="0dp"
-        />
+        android:textAlignment="center" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
