--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#00e5ff</color>
+    <color name="colorPrimaryDark">#00b8d4</color>
+    <color name="colorAccent">#ef5350</color>
 
     <!-- Card Text -->
     <color name="card_textColor">#444</color>
