--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4dd0e1</color>
-    <color name="colorPrimaryDark">#00b8d4</color>
-    <color name="colorAccent">#ad1457</color>
+    <color name="colorPrimary">#00BCD4</color>
+    <color name="colorPrimaryDark">#009688</color>
+    <color name="colorAccent">#3F51B5</color>
 
     <!-- Card Text -->
     <color name="card_textColor">#444</color>
