--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <!-- Card Text -->
     <color name="card_textColor">#444</color>
+    <color name="card_text_subColor">#90a4ae</color>
 </resources>
