--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,10 +4,15 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-    <!-- Card dimensions -->
-    <dimen name="card_height">85dp</dimen>
-    <dimen name="card_corner_radius">4dp</dimen>
-    <dimen name="card_text_size">26sp</dimen>
-    <dimen name="card_padding">15sp</dimen>
-    <dimen name="card_elevation">5dp</dimen>
+    <!-- Recycler dimensions -->
+    <dimen name="rec_topPadding">8dp</dimen>
+
+    <!-- List dimensions -->
+    <dimen name="list_height">72dp</dimen>
+    <dimen name="list_text_size">16sp</dimen>
+    <dimen name="list_text_sub_size">14sp</dimen>
+    <dimen name="list_title_leftPadding">16dp</dimen>
+    <dimen name="list_text_topBotPadding">20dp</dimen>
+    <dimen name="list_maintext_leftPadding">16dp</dimen>
+    <dimen name="list_maintext_rightPadding">16dp</dimen>
 </resources>
