--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,22 +3,32 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clipToPadding="false"
+    >
 
     <TextView
+        android:id="@+id/alert_header"
         android:text="Alerts"
         android:layout_width="match_parent"
-        android:layout_height="38dp"
-        android:textSize="34sp"
+        android:layout_height="@dimen/list_header_height"
+        android:textSize="@dimen/list_header_textSize"
         android:layout_marginTop="?attr/actionBarSize"
-        android:paddingLeft="@dimen/list_title_leftPadding" />
+        android:paddingLeft="@dimen/list_header_leftPadding"
+        android:paddingRight="@dimen/list_header_leftPadding"
+        android:textColor="@color/colorPrimary"
+        android:paddingTop="@dimen/list_header_topBotPadding"
+        android:paddingBottom="@dimen/list_header_topBotPadding"
+        android:elevation="@dimen/list_header_elevation"
+        android:background="@color/list_header_background"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:scrollbars="vertical"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:paddingTop="@dimen/rec_topPadding"
+
         />
 
 </LinearLayout>
