--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00BCD4</color>
-    <color name="colorPrimaryDark">#009688</color>
-    <color name="colorAccent">#3F51B5</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#1A237E</color>
+    <color name="colorAccent">#00BCD4</color>
 
     <!-- Card Text -->
     <color name="card_textColor">#444</color>
     <color name="card_text_subColor">#90a4ae</color>
+    <color name="list_header_background">#ffff</color>
 </resources>
