--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,17 +4,17 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-    <!-- Recycler dimensions -->
+    <!-- Recycler -->
     <dimen name="rec_topPadding">8dp</dimen>
 
-    <!-- List header dimensions -->
+    <!-- List header -->
     <dimen name="list_header_height">48dp</dimen>
     <dimen name="list_header_leftPadding">16dp</dimen>
     <dimen name="list_header_textSize">18sp</dimen>
     <dimen name="list_header_topBotPadding">14dp</dimen>
     <dimen name="list_header_elevation">2dp</dimen>
 
-    <!-- List tile dimentions -->
+    <!-- List tile -->
     <dimen name="list_height">72dp</dimen>
     <dimen name="list_text_size">16sp</dimen>
     <dimen name="list_text_sub_size">14sp</dimen>
@@ -22,4 +22,8 @@
     <dimen name="list_text_middlePadding">2dp</dimen>
     <dimen name="list_maintext_leftPadding">16dp</dimen>
     <dimen name="list_maintext_rightPadding">16dp</dimen>
+
+    <!-- List tile switch -->
+    <dimen name="list_switch_rightPadding">16dp</dimen>
+    <dimen name="list_switch_topBotPadding">26dp</dimen>
 </resources>
