--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />-->
+   <item
+       android:id="@+id/action_info"
+       android:orderInCategory="100"
+       android:title="@string/action_info"
+       android:icon="@android:drawable/ic_dialog_info"
+       app:showAsAction="never" />
 </menu>
