--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:id="@+id/activity_main"
-    tools:context="com.unlimited.penguins.battextr.MainActivity">
+    tools:context="com.unlimited.penguins.loba.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
