--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.unlimited.penguins.battextr.MainActivityFragment"
+    tools:context="com.unlimited.penguins.loba.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
 </RelativeLayout>
